# anamnesis

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
.claude-skills/: README.md
.github/workflows/: ci.yml
anamnesis/: __init__.py  memory.py
anamnesis/agent/: bedrock.py  loop.py
anamnesis/db/: engine.py  models.py  schema.sql  vector_type.py
anamnesis/integrations/: langchain.py
app/: main.py
app/lambda_handlers/: api.py  consolidate.py  ops_agent.py
docs/: blog-writeup-draft.md  cockroachdb-skills-issue-draft.md  devpost-submission-draft.md
docs/results/: benchmark_output.txt  changefeed_demo_output.txt  concurrency_test_output.txt  explain_analyze_vector_index.txt  mvcc_timetravel_demo_output.txt  network_partition_demo_output.txt  node_kill_demo_output.txt  ops_agent_output.txt  region_kill_demo_output.txt  scale_test_output.txt
infra/: README.md  docker-compose.multinode.yml  docker-compose.multiregion.yml  template.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_hash_shard_audit_index.py
scripts/: benchmark.py  changefeed_demo.py  concurrency_test.py  mvcc_timetravel_demo.py  naive_vector_memory.py  network_partition_demo.py  node_kill_demo.py  region_kill_demo.py  scale_test.py
tests/: conftest.py  test_api.py  test_langchain_integration.py  test_memory.py  test_secrets_manager.py
ui/: index.html
