[project]
name = "anamnesis"
version = "0.1.0"
description = "Transactional, temporal, self-correcting agentic memory on CockroachDB"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0",
    "sqlalchemy-cockroachdb>=2.0",
    "psycopg[binary]>=3.1",
    "mangum>=0.17",
    "alembic>=1.13",
    "pydantic>=2.6",
    "boto3>=1.34",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
langchain = [
    "langchain-core>=0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anamnesis*"]

[tool.ruff]
line-length = 100
