[project]
name = "anamnesis"
version = "0.1.0"
description = "Transactional, temporal, self-correcting agentic memory on CockroachDB"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0",
    "sqlalchemy-cockroachdb>=2.0",
    "psycopg[binary]>=3.1",
    "mangum>=0.17",
    "alembic>=1.13",
    "pydantic>=2.6",
    "boto3>=1.34",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
bench = [
    "sentence-transformers>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anamnesis*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# `app/` and `scripts/` are siblings of the `anamnesis` package, not part
# of it (see [tool.setuptools.packages.find] above), so they're not on
# sys.path via the package install itself. Locally this happened to work
# anyway because this environment's `pip install -e .` used the older
# .pth-based editable-install mechanism, which incidentally adds the whole
# repo root to sys.path — but CI's fresh install used the newer PEP 660
# import-hook editable install, which doesn't, and tests/test_api.py's
# `from app.main import app` failed there with ModuleNotFoundError. This
# makes the repo root explicit and portable instead of relying on that
# incidental, install-mechanism-dependent behavior.
pythonpath = ["."]
